--- a/example-quiz/src/main/resources/templates/result.html
+++ b/example-quiz/src/main/resources/templates/result.html
@@ -3,18 +3,17 @@
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../static/css/materialize.css"  media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>        
   </head>
 
     <body>
         <h3><b>Result</b></h3>
         <p th:text="'The answer is: ' + ${quiz.answer}"/>
-        <p th:text="'Your answer was: ' + ${quiz.user_answer}"/>
 
-        <!--JavaScript at end of body for optimized loading-->
-        <script type="text/javascript" src="../static/js/materialize.js"></script>
     </body>
   </html>
