--- a/example-quiz/src/main/resources/templates/quiz.html
+++ b/example-quiz/src/main/resources/templates/quiz.html
@@ -74,8 +74,7 @@
                 </li>
             </ul>
             <button class="btn waves-effect waves-light" type="submit" name="action" value="Submit">
-                Submit
-                <i class="material-icons right">send</i>
+                Submit <i class="material-icons right">send</i>
             </button>
         </form>
         <!--End form container-->
